[title]ui bug 8 fix- survey list screen to match with design

--- a/SurveyApp/SurveyApp/Info.plist
+++ b/SurveyApp/SurveyApp/Info.plist
@@ -24,5 +24,7 @@
 		<string>NeuzeitSLTStd-Book.otf</string>
 		<string>NeuzeitSLTStd-BookHeavy.otf</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<true/>
 </dict>
 </plist>
