--- a/SurveyApp/SurveyApp/Info.plist
+++ b/SurveyApp/SurveyApp/Info.plist
@@ -26,5 +26,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
+	<key>UIStatusBarHidden</key>
+	<false/>
 </dict>
 </plist>
