--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,8 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Danger
         uses: danger/swift@3.3.0
-        run: | 
-            bundle exec danger
         with:
             args: --failOnErrors --no-publish-check
+            supported path: "Dangerfile.swift"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
