--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,9 +26,13 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a set of commands using the runners shell
-      - name: Danger
-        uses: danger/swift@3.3.0
-        with:
-            args: "--dangerfile ./dangerfile.ts"
+      - name: install npm
+        run: brew install node
+      - name: install danger
+        run: npm install -g danger
+      - run: swift build
+
+      - run: swift run danger-swift ci --verbose --failOnErrors
+        if: ${{ github.event_name == 'pull_request' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
