--- a/.github/workflows/ci_danger_auto_comment_in_PR.yml
+++ b/.github/workflows/ci_danger_auto_comment_in_PR.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI_Test
 
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  #push:
-    #branches: [ "main" ]
-  #pull_request:
-    #branches: [ "main" ]
+  push:
+    branches: [ "ci_test" ]
+  pull_request:
+    branches: [ "ci_test" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -33,6 +33,6 @@ jobs:
       - run: swift build
 
       - run: swift run danger-swift ci --verbose --failOnErrors
-        #if: ${{ github.event_name == 'pull_request' }}
+        if: ${{ github.event_name == 'pull_request' }}
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
