--- a/.github/workflows/ci_danger_auto_comment_in_PR.yml
+++ b/.github/workflows/ci_danger_auto_comment_in_PR.yml
@@ -33,6 +33,6 @@ jobs:
       - run: swift build
 
       - run: swift run danger-swift ci --verbose --failOnErrors
-        if: ${{ github.event_name == 'pull_request' }}
+        if: ${{ github.event_name == 'pull_request' || 'push' }}
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
