--- a/.github/workflows/ci_danger_auto_comment_in_PR.yml
+++ b/.github/workflows/ci_danger_auto_comment_in_PR.yml
@@ -5,10 +5,10 @@ name: CI_Test
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "ci_test" ]
+  #push:
+    #branches: [ "ci_test" ]
   pull_request:
-    branches: [ "ci_test" ]
+    branches: [ "main", "ci_test" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
